<resources>
    <string name="app_name">Tipsease</string>
    <string name="forget_user_login_info">Forget Username/Password?</string>
    <string name="customer_check_box_text">Customer</string>
    <string name="employee_check_box_text">Employee</string>
    <string name="sign_up_text">Sign up</string>
    <string name="select_account_type_text">Please select an account type</string>
    <string name="create_customer_account_button_text">Create Customer Account</string>
    <string name="create_employee_account_button_text">Create Employee Account</string>
    <string name="employee_form_desc">Please fill out the following form to begin collecting your tips!</string>
    <string name="customer_form_desc">Please fill out the following form to begin tipping!</string>
    <string name="form_first_name_hint">First Name</string>
    <string name="form_last_name_hint">Last Name</string>
    <string name="form_email_hint">Email</string>
    <string name="form_username_hint">Username</string>
    <string name="form_password_hint">Password</string>
    <string name="form_retype_password_hint">Retype Password</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="employee_form_occupation_hint">Occupation</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="search_employee_text">Search by name or username</string>
    <string name="log_out_button_text">Log Out</string>
    <string name="employee_home_page_default_title">Welcome Firstname Lastname!</string>
    <string name="login_button_text">Login</string>
    <string name="tipping_history_title">Your Recent Tips</string>
    <string name="account_balance_text">Account Balance</string>
    <string name="transfer_to_bank_button_text">Transfer to Bank</string>
    <string name="add_tip_button_text">Add Tip</string>
    <string name="paint_amount_hint">Enter Paid Amount</string>
    <string name="custom_tip_hint">Custom Tip</string>
    <string name="ten_percent">10%</string>
    <string name="fifteen_percent">15%</string>
    <string name="twenty_percent">20%</string>
    <string name="finish_tipping_button_text">Finish Tipping</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="retype_password_hint">Retype Password</string>
    <string name="workplace_hint">Workplace</string>
    <string name="occupation_hint">Occupation</string>
    <string name="time_worked_hint">Time worked at job</string>
    <string name="tagline_hint">Tagline</string>
    <string name="bio_hint">Bio</string>
    <string name="update_button_hint">Update</string>
    <string name="tip_passed_toast">Your tip was processed!</string>
    <string name="tip_failed_toast">Could not process your tip</string>
    <string name="registration_pass_toast">Account successfully created!</string>
    <string name="registration_fail_toast">Account registration failed</string>
    <string name="rating_pass_toast">Thanks for rating!</string>
    <string name="choose_login_type_toast">Please select a user Type</string>
    <string name="login_fail_toast">Login failed</string>
    <string name="balance_transfer_pass_toast">Balance Transferred</string>
    <string name="balance_transfer_fail_toast">Couldn\'t Transfer Balance</string>
    <string name="update_details_pass_toast">Details Updated!</string>
    <string name="update_details_fail_toast">Details Couldn\'t be Updated</string>
    <string name="title_activity_customer_navigation">CustomerNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

</resources>
