<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CreateEmployeeAccountFragment"
    android:padding="10dp"
    android:orientation="vertical"
    android:gravity="center_horizontal">


    <TextView
        android:id="@+id/employee_form_desc_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/employee_form_desc"
        android:textSize="20sp" />
    
    <EditText
        android:id="@+id/employee_first_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/form_first_name_hint"
        android:maxLines="1"/>
    
    <EditText
        android:id="@+id/employee_last_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/form_last_name_hint"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/employee_occupation_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/employee_form_occupation_hint"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/employee_username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/form_username_hint"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/employee_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/form_password_hint"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/employee_retype_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/form_retype_password_hint"
        android:maxLines="1"/>

    <Button
        android:id="@+id/employee_create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_employee_account_button_text" />


</LinearLayout>