<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CreateCustomerAccountFragment"
    android:padding="10dp"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/customer_form_desc_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customer_form_desc"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/customer_first_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name_hint"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/customer_last_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name_hint"
        android:maxLines="1"/>


    <EditText
        android:id="@+id/customer_username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/customer_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/customer_retype_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/retype_password_hint"
        android:inputType="textPassword"
        android:maxLines="1"/>

    <Button
        android:id="@+id/customer_create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_customer_account_button_text"
        android:background="@color/colorPrimary"
        android:padding="6dp"
        />


</LinearLayout>