<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUpChoiceFragment"
    android:padding="10dp">

    <TextView
        android:id="@+id/sign_up_choice_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_account_type_text"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"/>

    <RadioGroup
        android:id="@+id/sign_up_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/sign_up_choice_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    <RadioButton
        android:id="@+id/employee_sign_up_radio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employee_check_box_text"
        android:textSize="20sp" />

    <RadioButton
        android:id="@+id/customer_sign_up_radio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_check_box_text"
        android:textSize="20sp" />

    </RadioGroup>

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button_text"
        app:layout_constraintTop_toBottomOf="@id/sign_up_radio_group"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>